# rvgen

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  README.md  mkdocs.yml  prompt.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yml  docs.yml  test.yml
chipforge_inst_gen/: asm_program_gen.py  auto_regress.py  cli.py  config.py  iss.py  stream.py  vector_config.py
chipforge_inst_gen/coverage/: __init__.py  cgf.py  collectors.py  directed.py  report.py  runtime.py  tools.py
chipforge_inst_gen/isa/: __init__.py  filtering.py  rv32v.py  vector.py
chipforge_inst_gen/streams/: __init__.py  directed.py  load_store.py
chipforge_inst_gen/targets/: __init__.py
docs/: architecture.md  coverage.md  index.md  regression-runner.md  releasing.md  testlist.md  user-area.md  verification-guide.md  verification-plan.md  verification-results.md
docs/examples/: annotated-goals.yaml  coverage-report.html  custom-stream.py  custom-testlist.yaml  privileged-testlist.yaml
docs/research/: comparison-and-next-steps.md
rvgen/: __init__.py  __main__.py  api.py  asm_program_gen.py  auto_regress.py  cli.py  config.py  gcc.py  iss.py  minimize.py  search.py  seeding.py  sequence.py  stream.py  testlist.py  vector_config.py
rvgen/coverage/: __init__.py  cgf.py  cgf_isac.py  collectors.py  dashboard.py  directed.py  report.py  runtime.py  steering.py  sv_export.py  tools.py
rvgen/isa/: __init__.py  amo.py  base.py  bitmanip.py  compressed.py  crypto.py  csr_ops.py  csrs.py  enums.py  factory.py  filtering.py  floating_point.py  h_ext.py  modern.py  rv32a.py  rv32c.py  rv32d.py  rv32dc.py  rv32f.py  rv32fc.py  rv32i.py  rv32m.py  rv32v.py  rv64a.py  rv64c.py  rv64d.py  rv64f.py  rv64i.py  rv64m.py  utils.py  vector.py  vector_crypto.py  zfh.py
rvgen/privileged/: __init__.py  boot.py  debug_rom.py  interrupts.py  paging.py  pmp.py  trap.py
rvgen/sections/: __init__.py  data_page.py  signature.py
rvgen/streams/: __init__.py  amo_streams.py  base.py  directed.py  h_ext.py  load_store.py  loop.py  vector_hazard.py  vector_load_store.py  vector_pick.py  vsetvli_stress.py  vstart_corner.py
rvgen/targets/: __init__.py  builtin.py  core_setting.py  loader.py  presets.py
rvgen/testlists/: base_testlist.yaml
scripts/: mcu_validate.sh  regression.py
tests/unit/: test_aia.py  test_amo.py  test_api.py  test_auto_regress_reproducibility.py  test_base.py  test_boot.py  test_cache_conflict_goals_reachable.py  test_cgf_isac.py  test_cli.py  test_cli_packaged_testlist.py  test_config.py  test_cov_steering.py  test_coverage.py  test_coverage_new_groups.py  test_coverage_sprint1.py  test_coverage_sprint2.py  test_csr_ops.py  test_csr_write_whitelist.py  test_csrs.py  (+37 more)
user/: README.md
(+21 files in other folders)
